--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,9 +18,14 @@ android {
     }
 
     buildTypes {
+        debug{
+            minifyEnabled false
+            buildConfigField "String", "API_URL", "\"https://v2.jokeapi.dev/\""
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "API_URL", "\"https://v2.jokeapi.dev/\""
         }
     }
     compileOptions {
@@ -47,4 +52,13 @@ dependencies {
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    // Retrofit Gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Chuck
+    debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
+    releaseImplementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
 }
